--- a/_static/jupyter-sphinx.css
+++ b/_static/jupyter-sphinx.css
@@ -47,7 +47,6 @@ div.jupyter_container {
   background-color: #f7f7f7;
   border: none;
   background: none;
-  box-shadow: none;
   -webkit-box-shadow: none; /* for nature */
   -moz-box-shadow: none; /* for nature */
 }
@@ -91,12 +90,11 @@ div.jupyter_container {
     background: none;
     padding: 4px;
     border: none;
-    box-shadow: none;
     -webkit-box-shadow: none; /* for nature */
     -moz-box-shadow: none; /* for nature */
 }
 .jupyter_container .code_cell td.linenos {
-  text-align: right;
+  align: right;
   padding: 4px 4px 4px 8px;
   border-right: 1px solid #cfcfcf;
   color: #999;
