--- a/_static/togglebutton.css
+++ b/_static/togglebutton.css
@@ -1,62 +1,59 @@
 /* Visibility of the target */
-.toggle, div.admonition.toggle .admonition-title ~ * {
-    transition: opacity .5s, height .5s;
+.toggle {
+    transition: opacity .5s;
 }
 
-.toggle-hidden:not(.admonition) {
+.toggle-hidden {
     visibility: hidden;
     opacity: 0;
     height: 1.5em;
-    margin: 0px;
-    padding: 0px;
-}
-
-/* Overrides for admonition toggles */
-div.admonition.toggle-hidden {
-    height: 3em;
-}
-
-div.admonition.toggle-hidden .admonition-title ~ * {
-    opacity: 0;
-    visibility: hidden;
+    margin: 0px !important;
+    padding: 0px !important;
 }
 
 /* Toggle buttons inside admonitions so we see the title */
-.toggle.admonition {
+.toggle-body {
     position: relative;
 }
 
-.toggle.admonition.admonition-title:after {
-    content: "" !important;
+.toggle-body .admonition-title:after {
+    content: "";
 }
 
-/* Note, we'll over-ride this in sphinx-book-theme */
-.toggle.admonition button.toggle-button {
+.toggle-body button.toggle-button {
     margin-right: 0.5em;
     right: 0em;
     position: absolute;
-    top: .2em;
+    top: .3em;
 }
+
+/* These should be totally hidden since they're inside an admonition */
+
+.toggle-body .toggle-hidden * {
+    margin: 0em;
+    padding: 0em;
+}
+
 
 /* General button style */
 button.toggle-button {
     background: #999;
     border: none;
     z-index: 999;
+    font-size: 0.7em;
     right: -2.5em;
     margin-left: -2.5em; /* A hack to keep code blocks from being pushed left */
     position: relative;
     float: right;
     border-radius: 100%;
-    width: 1.5em;
-    height: 1.5em;
+    width: 23px;
+    height: 23px;
     padding: 0px;
 }
 
 button.toggle-button.toggle-button-hidden:before {
     content: "Click to show";
     position: absolute;
-    font-size: .8em;
     left: -6.5em;
     bottom: .4em;
 }
