--- a/_static/jbvinc.css
+++ b/_static/jbvinc.css
@@ -33,7 +33,7 @@ span.pre {
 /* Cadre exemple */
 
 .example {
-  background-color: #f2f6fa;
+  background-color: #F7F9FA;
   padding: 1em;
   border-left: 2px #c6c9cc solid;
   margin: 1em 0;
