--- a/_static/css/jbvinc.css
+++ b/_static/css/jbvinc.css
@@ -53,7 +53,7 @@ span.pre {
 /* Hack pour faire disparaître les boutons GitHub et Download */
 
 div.dropdown-buttons-trigger {
-    display: none;
+/*    display: none;*/
 }
 
 
