--- a/_static/jbvinc.css
+++ b/_static/jbvinc.css
@@ -41,8 +41,13 @@ span.pre {
 
 /* Taille des légendes */
 
-main.bd-content #main-content div.figure span {
+figure span.caption-number, figure span.caption-text {
+  font-family: "Source Sans Pro";
   font-size: 1.1rem;
+}
+
+figure span.caption-number {
+  margin-right: .5em;
 }
 
 /* Hack pour faire disparaître le bouton "launch" */
@@ -84,6 +89,20 @@ table p { margin-bottom: 0 }
   content: "Exemple";
   font-weight: bold;
   color: #9c9ea1;
+}
+
+.admonition.exemple,
+div.admonition.exemple {
+    border-color: #AEBCE8
+}
+.admonition.exemple>.admonition-title:before,
+div.admonition.exemple>.admonition-title:before {
+    background-color: #AEBCE8;
+}
+.admonition.exemple>.admonition-title:after,
+div.admonition.exemple>.admonition-title:after {
+    color: #AEBCE8;
+    content: (--pst-icon-admonition-tip);
 }
 
 
@@ -132,7 +151,12 @@ table p { margin-bottom: 0 }
   margin-bottom: 2rem;
 }
 
+
 /* Bouton exercice */
+
+a.exercise {
+    text-decoration: none;
+}
 
 a.exercise::before {
     content: "➜ Exercice ";
